--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1 style="text-align: center; font-size: 36px; margin-bottom: 10px;">Luis Palma</h1> <!-- Your name centered with a font size of 36 pixels and some bottom margin -->
         <p style="text-align: center;">
-            <a href="mailto:palmal@kean.edu">palmal@kean.edu</a> | 908-333-3333 | Elizabeth, NJ <!-- Your email, phone number, and location -->
+            <a href="mailto:palmal@kean.edu">Email and phone number upon request/a> | 908-333-3333 | Elizabeth, NJ <!-- Your email, phone number, and location -->
         </p>
     </header>
     
@@ -118,7 +118,7 @@
         <section id="References">
             <h2>References</h2>
             <ul>
-                <li>Dr. Jing-Chiou Liou - Professor of Computer Science and CS Advisor Kean - jliou@kean.edu - (908)-737-4703</li>
+                <li>References upon request</li>
             </ul>
         </section>
         <!-- End of Technical Skills section -->
